Fix code block text contrast for accessibility

--- a/docs/_sass/_code.scss
+++ b/docs/_sass/_code.scss
@@ -24,7 +24,7 @@ pre {
 pre code {
   padding: 0;
   font-size: 100%;
-  color: inherit;
+  color: #000;
   background-color: transparent;
 }
 
