--- a/docs/_sass/_syntax.scss
+++ b/docs/_sass/_syntax.scss
@@ -1,65 +1,65 @@
 .highlight .hll { background-color: #ffc; }
-.highlight .c { color: #999; } /* Comment */
-.highlight .err { color: #a00; background-color: #faa } /* Error */
-.highlight .k { color: #069; } /* Keyword */
-.highlight .o { color: #555 } /* Operator */
-.highlight .cm { color: #09f; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #099 } /* Comment.Preproc */
-.highlight .c1 { color: #999; } /* Comment.Single */
-.highlight .cs { color: #999; } /* Comment.Special */
-.highlight .gd { background-color: #fcc; border: 1px solid #c00 } /* Generic.Deleted */
-.highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #f00 } /* Generic.Error */
-.highlight .gh { color: #030; } /* Generic.Heading */
-.highlight .gi { background-color: #cfc; border: 1px solid #0c0 } /* Generic.Inserted */
-.highlight .go { color: #aaa } /* Generic.Output */
-.highlight .gp { color: #009; } /* Generic.Prompt */
+.highlight .c { color: #000; } /* Comment */
+.highlight .err { color: #000; background-color: transparent } /* Error */
+.highlight .k { color: #000; } /* Keyword */
+.highlight .o { color: #000 } /* Operator */
+.highlight .cm { color: #000; font-style: normal } /* Comment.Multiline */
+.highlight .cp { color: #000 } /* Comment.Preproc */
+.highlight .c1 { color: #000; } /* Comment.Single */
+.highlight .cs { color: #000; } /* Comment.Special */
+.highlight .gd { background-color: transparent; border: none } /* Generic.Deleted */
+.highlight .ge { font-style: normal } /* Generic.Emph */
+.highlight .gr { color: #000 } /* Generic.Error */
+.highlight .gh { color: #000; } /* Generic.Heading */
+.highlight .gi { background-color: transparent; border: none } /* Generic.Inserted */
+.highlight .go { color: #000 } /* Generic.Output */
+.highlight .gp { color: #000; } /* Generic.Prompt */
 .highlight .gs { } /* Generic.Strong */
-.highlight .gu { color: #030; } /* Generic.Subheading */
-.highlight .gt { color: #9c6 } /* Generic.Traceback */
-.highlight .kc { color: #069; } /* Keyword.Constant */
-.highlight .kd { color: #069; } /* Keyword.Declaration */
-.highlight .kn { color: #069; } /* Keyword.Namespace */
-.highlight .kp { color: #069 } /* Keyword.Pseudo */
-.highlight .kr { color: #069; } /* Keyword.Reserved */
-.highlight .kt { color: #078; } /* Keyword.Type */
-.highlight .m { color: #f60 } /* Literal.Number */
-.highlight .s { color: #d44950 } /* Literal.String */
-.highlight .na { color: #4f9fcf } /* Name.Attribute */
-.highlight .nb { color: #366 } /* Name.Builtin */
-.highlight .nc { color: #0a8; } /* Name.Class */
-.highlight .no { color: #360 } /* Name.Constant */
-.highlight .nd { color: #99f } /* Name.Decorator */
-.highlight .ni { color: #999; } /* Name.Entity */
-.highlight .ne { color: #c00; } /* Name.Exception */
-.highlight .nf { color: #c0f } /* Name.Function */
-.highlight .nl { color: #99f } /* Name.Label */
-.highlight .nn { color: #0cf; } /* Name.Namespace */
-.highlight .nt { color: #2f6f9f; } /* Name.Tag */
-.highlight .nv { color: #033 } /* Name.Variable */
+.highlight .gu { color: #000; } /* Generic.Subheading */
+.highlight .gt { color: #000 } /* Generic.Traceback */
+.highlight .kc { color: #000; } /* Keyword.Constant */
+.highlight .kd { color: #000; } /* Keyword.Declaration */
+.highlight .kn { color: #000; } /* Keyword.Namespace */
+.highlight .kp { color: #000 } /* Keyword.Pseudo */
+.highlight .kr { color: #000; } /* Keyword.Reserved */
+.highlight .kt { color: #000; } /* Keyword.Type */
+.highlight .m { color: #000 } /* Literal.Number */
+.highlight .s { color: #000 } /* Literal.String */
+.highlight .na { color: #000 } /* Name.Attribute */
+.highlight .nb { color: #000 } /* Name.Builtin */
+.highlight .nc { color: #000; } /* Name.Class */
+.highlight .no { color: #000 } /* Name.Constant */
+.highlight .nd { color: #000 } /* Name.Decorator */
+.highlight .ni { color: #000; } /* Name.Entity */
+.highlight .ne { color: #000; } /* Name.Exception */
+.highlight .nf { color: #000 } /* Name.Function */
+.highlight .nl { color: #000 } /* Name.Label */
+.highlight .nn { color: #000; } /* Name.Namespace */
+.highlight .nt { color: #000; } /* Name.Tag */
+.highlight .nv { color: #000 } /* Name.Variable */
 .highlight .ow { color: #000; } /* Operator.Word */
-.highlight .w { color: #bbb } /* Text.Whitespace */
-.highlight .mf { color: #f60 } /* Literal.Number.Float */
-.highlight .mh { color: #f60 } /* Literal.Number.Hex */
-.highlight .mi { color: #f60 } /* Literal.Number.Integer */
-.highlight .mo { color: #f60 } /* Literal.Number.Oct */
-.highlight .sb { color: #c30 } /* Literal.String.Backtick */
-.highlight .sc { color: #c30 } /* Literal.String.Char */
-.highlight .sd { color: #c30; font-style: italic } /* Literal.String.Doc */
-.highlight .s2 { color: #c30 } /* Literal.String.Double */
-.highlight .se { color: #c30; } /* Literal.String.Escape */
-.highlight .sh { color: #c30 } /* Literal.String.Heredoc */
-.highlight .si { color: #a00 } /* Literal.String.Interpol */
-.highlight .sx { color: #c30 } /* Literal.String.Other */
-.highlight .sr { color: #3aa } /* Literal.String.Regex */
-.highlight .s1 { color: #c30 } /* Literal.String.Single */
-.highlight .ss { color: #fc3 } /* Literal.String.Symbol */
-.highlight .bp { color: #366 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #033 } /* Name.Variable.Class */
-.highlight .vg { color: #033 } /* Name.Variable.Global */
-.highlight .vi { color: #033 } /* Name.Variable.Instance */
-.highlight .il { color: #f60 } /* Literal.Number.Integer.Long */
+.highlight .w { color: #000 } /* Text.Whitespace */
+.highlight .mf { color: #000 } /* Literal.Number.Float */
+.highlight .mh { color: #000 } /* Literal.Number.Hex */
+.highlight .mi { color: #000 } /* Literal.Number.Integer */
+.highlight .mo { color: #000 } /* Literal.Number.Oct */
+.highlight .sb { color: #000 } /* Literal.String.Backtick */
+.highlight .sc { color: #000 } /* Literal.String.Char */
+.highlight .sd { color: #000; font-style: normal } /* Literal.String.Doc */
+.highlight .s2 { color: #000 } /* Literal.String.Double */
+.highlight .se { color: #000; } /* Literal.String.Escape */
+.highlight .sh { color: #000 } /* Literal.String.Heredoc */
+.highlight .si { color: #000 } /* Literal.String.Interpol */
+.highlight .sx { color: #000 } /* Literal.String.Other */
+.highlight .sr { color: #000 } /* Literal.String.Regex */
+.highlight .s1 { color: #000 } /* Literal.String.Single */
+.highlight .ss { color: #000 } /* Literal.String.Symbol */
+.highlight .bp { color: #000 } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #000 } /* Name.Variable.Class */
+.highlight .vg { color: #000 } /* Name.Variable.Global */
+.highlight .vi { color: #000 } /* Name.Variable.Instance */
+.highlight .il { color: #000 } /* Literal.Number.Integer.Long */
 
 .css .o,
 .css .o + .nt,
-.css .nt + .nt { color: #999; }
+.css .nt + .nt { color: #000; }
